--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img
               src="imgs/zoologico.jpg "
               alt="Zoológico"
-              class="w3-animate-left w3-round"
+              class="w3-animate-left w3-round w3-greyscale-min w3-hover-greyscale"
             />
           </div>
           <div class="desc-atracao">
@@ -54,7 +54,7 @@
             <img
               src="imgs/ppensil.jpg"
               alt="Ponte Pênsil"
-              class="w3-animate-bottom w3-round"
+              class="w3-animate-bottom w3-round w3-greyscale-min w3-hover-greyscale"
             />
           </div>
           <div class="desc-atracao">
@@ -81,7 +81,7 @@
             <img
               src="imgs/shopping.jpg"
               alt="Shopping"
-              class="w3-animate-top w3-round"
+              class="w3-animate-top w3-round w3-greyscale-min w3-hover-greyscale"
             />
           </div>
           <div class="desc-atracao">
@@ -110,7 +110,7 @@
             <img
               src="imgs/elevador.jpg"
               alt="Elevador"
-              class="w3-animate-bottom w3-round"
+              class="w3-animate-bottom w3-round w3-greyscale-min w3-hover-greyscale"
             />
           </div>
           <div class="desc-atracao">
@@ -137,7 +137,7 @@
             <img
               src="imgs/estacao.jpg"
               alt="Estação da Paulista"
-              class="w3-animate-top w3-round"
+              class="w3-animate-top w3-round w3-greyscale-min w3-hover-greyscale"
             />
           </div>
           <div class="desc-atracao">
@@ -170,7 +170,7 @@
             <img
               src="imgs/engenho.jpg"
               alt="Engenho"
-              class="w3-animate-right w3-round"
+              class="w3-animate-right w3-round w3-greyscale-min w3-hover-greyscale"
             />
           </div>
           <div class="desc-atracao">
